--- a/ML-KNN-Iris.ipynb
+++ b/ML-KNN-Iris.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "a7aebe90",
+   "execution_count": 18,
+   "id": "919d772d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from sklearn.neighbors import KNeighborsClassifier"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "a7d8e3c0",
+   "id": "349e5e07",
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "df7f878c",
+   "id": "4dbae701",
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "aa924b90",
+   "id": "8b1454a2",
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "40f74458",
+   "id": "4648890d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,8 +389,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "id": "9ae99e0a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#create model \n",
+    "model = KNeighborsClassifier()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "8b12957d",
+   "id": "f94c02b1",
    "metadata": {},
    "outputs": [],
    "source": []
