save the model to reuse

--- a/ML-KNN-Iris.ipynb
+++ b/ML-KNN-Iris.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "408776de",
+   "id": "c32ed768",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "ed4e4b1d",
+   "id": "b75f9bcb",
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "30363d40",
+   "id": "91111e33",
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +354,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "b6cb0d2b",
+   "id": "fb1f7432",
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +379,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "1fc6b9be",
+   "id": "d1f11f7f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "8e7ba0b2",
+   "id": "1b182654",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "0470fa37",
+   "id": "85c63704",
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "948fae64",
+   "id": "3d0a4351",
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "259d5508",
+   "id": "4a590346",
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +466,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "4751beca",
+   "id": "8d7f6e3f",
    "metadata": {},
    "outputs": [
     {
@@ -485,8 +485,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 48,
+   "id": "481005bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['KNN-iris-model.sav']"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#save the model to reuse\n",
+    "import joblib \n",
+    "joblib.dump(model,'KNN-iris-model.sav')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "da479b1c",
+   "id": "c1e52681",
    "metadata": {},
    "outputs": [],
    "source": []
