amount neighbors n_neighbors

--- a/ML-KNN-Iris.ipynb
+++ b/ML-KNN-Iris.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "c32ed768",
+   "id": "519ed7ba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "b75f9bcb",
+   "id": "ca03f84b",
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "91111e33",
+   "id": "0a201ff9",
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +354,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "fb1f7432",
+   "id": "bb12d161",
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +379,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "d1f11f7f",
+   "id": "7b993aa2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,18 +391,19 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "1b182654",
+   "id": "f6bd377d",
    "metadata": {},
    "outputs": [],
    "source": [
     "#create model \n",
-    "model = KNeighborsClassifier()"
+    "model = KNeighborsClassifier() \n",
+    "#model = KNeighborsClassifier(n_neighbors=3)  for nearest 3 "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "85c63704",
+   "id": "4ec94c54",
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +428,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "3d0a4351",
+   "id": "8a712f4d",
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +448,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "4a590346",
+   "id": "44fe355d",
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "8d7f6e3f",
+   "id": "58e18956",
    "metadata": {},
    "outputs": [
     {
@@ -486,7 +487,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "481005bc",
+   "id": "1e233e4b",
    "metadata": {},
    "outputs": [
     {
@@ -509,7 +510,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1e52681",
+   "id": "b9bd22e9",
    "metadata": {},
    "outputs": [],
    "source": []
